--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,3 @@
-
 CHANGES
 =======
 
@@ -9,6 +8,7 @@ CHANGES
 - Add functions added in Snap7 1.1.0
 - Add missing client functions
 - fix some partner functions
+- simplified API
 
 0.1
 ---
